# media-remote-control

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  media-remote-control.c
